<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nhapsp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/txtnhap">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtmahang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mã hàng"
            android:inputType="text"
            android:textColorHint="@color/teal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/txt1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edttenhang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ten_hang"
            android:inputType="text"
            android:textColorHint="@color/teal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/txt2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edttencongty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập nơi sản xuất"
            android:inputType="text"
            android:textColorHint="@color/teal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnhomhang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/txt5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/spinnhomhang">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtgianhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gia_nhap"
            android:inputType="number"
            android:textColorHint="@color/teal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/txt3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtgiaban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gia_ban"
            android:inputType="number"
            android:textColorHint="@color/teal" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/txt4">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtsoluong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/so_luong"
                android:inputType="number"
                android:textColorHint="@color/teal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtngaynhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint="Ngày nhập"
                android:inputType="date"
                android:textColorHint="@color/teal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinloai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/spinloai">


        <ImageView
            android:id="@+id/imgcamera"
            android:layout_marginRight="10dp"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_image"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hardwareAccelerated="true"
            android:hint="Mô tả"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>